2008-06-11  Djihed Afifi <djihed@gmail.com> 

	* ar.po: Updated Arabic Translation by Djihed Afifi.

2008-05-22  Djihed Afifi <djihed@gmail.com> 

	* ar.po: Updated Arabic Translation by Djihed Afifi.

2008-05-19  Djihed Afifi <djihed@gmail.com> 

	* ar.po: Updated Arabic Translation by Djihed Afifi.

2008-03-15  Alexander Nyakhaychyk  <nab@mail.by>

	* be.po: Updated Belarusian Translation.

2008-03-10  Marcel Telka  <marcel@telka.sk>

	* sk.po: Updated Slovak translation.

2008-03-08  Kostas Papadimas <pkst@gnome.org>

	* el.po: Updated Greek translation

2008-03-04  Nikos Charonitakis  <nikosx@gmail.com>

	* el.po: Updated Greek translation.

2008-03-03  Rahul Bhalerao <b.rahul.pm@gmail.com>

	* mr.po: Updated Marathi translations from Sandeep Shedmake.

2008-03-02  Philip Withnall  <pwithnall@svn.gnome.org>

	* en_GB.po: Updated British English translation.

2008-02-26  Changwoo Ryu  <cwryu@debian.org>

	* ko.po: Updated Korean translation.

2008-02-23  Yair Hershkovitz  <yairhr@gmail.com> 

	* he.po: Updated Hebrew translation.

2008-02-23  Petr Kovar  <pknbe@volny.cz>

	* cs.po: Fixed Czech translation by Pavel Sefranek.

2008-02-15  Claude Paroz  <claude@2xlibre.net>

	* LINGUAS: Added fur.
	* fur.po: Added Friulian translation by Massimo Furlani.

2008-02-14  Pawan Chitrakar <chautari@gmail.com>

	* ne.po: Updated Nepali Translation.

2008-02-09  Petr Kovar  <pknbe@volny.cz>

	* cs.po: Updated Czech translation by Pavel Sefranek.

2008-02-07  Chao-Hsiung Liao  <j_h_liau@yahoo.com.tw>

        * zh_HK.po: Updated Traditional Chinese translation(Hong Kong).
        * zh_TW.po: Updated Traditional Chinese translation(Taiwan).

2008-02-03  Arangel Angov <arangel@linux.net.mk>

        * mk.po: Updated Macedonian translation.

2008-01-31  Djihed Afifi <djihed@gmail.com> 

	* ar.po: Updated Arabic Translation by Djihed Afifi.

2008-01-16  Ani Peter <peter.ani@gmail.com>
	* ml.po: Updated Malayalam Translation

2008-01-13  Seán de Búrca  <sdeburca@svn.gnome.org>
