@@ -1,3 +1,8 @@
+2008-06-12  Rodney Dawes  <dobey.pwns@gmail.com>
+
+	* POTFILES.in:
+	Update to reflect changes with emblems
+
 2008-06-11  Djihed Afifi <djihed@gmail.com> 
 
 	* ar.po: Updated Arabic Translation by Djihed Afifi.
